--- a/src/project/demo/index.html
+++ b/src/project/demo/index.html
@@ -8,6 +8,7 @@
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>vue-startup</title>
     <link rel="stylesheet" href="styles/normalize.css" inline>
+    <link rel="stylesheet" href="../build/plugins/flexible/styles/index.css" inline>
   </head>
   <body>
     <script src="../build/plugins/flexible/scripts/hairline.js" inline></script>
