feat: 新增demo2以及跨子项目跳转示例

--- a/src/project/demo2/index.html
+++ b/src/project/demo2/index.html
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-    <title>demo</title>
+    <title>demo2</title>
     <link rel="stylesheet" href="styles/normalize.css" inline>
     <link rel="stylesheet" href="../build/plugins/flexible/styles/index.css" inline>
   </head>
